# aero-detect

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
aerodetect/: __init__.py  dataset.py  features.py  plots.py
aerodetect/modeling/: predict.py  train.py
