[project]
name = "aerodetect"
version = "0.0.1"
description = "AeroDetect: Benchmarking YOLO and Faster R-CNN for Aerial Object Detection"
authors = [{ name = "mkrajew" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

requires-python = "~=3.12.0"
dependencies = ["loguru", "pip", "python-dotenv", "ruff", "tqdm", "typer"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 99
src = ["aerodetect"]
include = ["pyproject.toml", "aerodetect/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["aerodetect"]
force-sort-within-sections = true
